# GenshinMummy

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
genshin_mummy/: __init__.py  opt.py  type.py
genshin_mummy/artifact_helper/: exception.py  judge.py  lock_and_unlock.py  page_manager.py  type.py  unlock_shit_artifact.py
genshin_mummy/materials/inventory/: weapon_icon.pkl
genshin_mummy/ocr/: opt.py  type.py
genshin_mummy/tools/: locator.py  logger.py  notifier.py  selector.py
tests/: test_artifact_judge.py  test_notifier.py
